[gd_scene load_steps=27 format=2]

[ext_resource path="res://ui/components/SliceEditor.gd" type="Script" id=1]
[ext_resource path="res://ui/icons/icon_pause.png" type="Texture" id=2]
[ext_resource path="res://ui/icons/icon_run.png" type="Texture" id=3]
[ext_resource path="res://ui/icons/icon_help.png" type="Texture" id=4]
[ext_resource path="res://ui/icons/icon_error.png" type="Texture" id=5]
[ext_resource path="res://ui/components/CodeEditor.gd" type="Script" id=6]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=7]
[ext_resource path="res://ui/theme/panel_sliceeditor.tres" type="StyleBox" id=8]
[ext_resource path="res://ui/icons/icon_console.png" type="Texture" id=9]
[ext_resource path="res://ui/icons/expand.png" type="Texture" id=10]
[ext_resource path="res://ui/theme/focus_outside_button.tres" type="StyleBox" id=11]
[ext_resource path="res://ui/components/LockedOverlay.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/icons/icon_continue.png" type="Texture" id=17]
[ext_resource path="res://ui/components/ConnectionIndicator.tscn" type="PackedScene" id=18]

[sub_resource type="InputEventAction" id=14]
action = "toggle_distraction_free_mode"
pressed = true

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 14 )

[sub_resource type="InputEventAction" id=1]
action = "run_code"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "toggle_pause"
pressed = true

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=7]
action = "reset_code"
pressed = true

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=9]
action = "toggle_solution"
pressed = true

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventAction" id=5]
action = "toggle_output"
pressed = true

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="CodeEditor" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
script = ExtResource( 6 )

[node name="Column" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="Column"]
margin_right = 1920.0
margin_bottom = 883.0
rect_clip_content = true
size_flags_vertical = 3
custom_styles/panel = ExtResource( 8 )

[node name="SliceEditor" type="TextEdit" parent="Column/PanelContainer"]
margin_right = 1920.0
margin_bottom = 883.0
rect_min_size = Vector2( 500, 0 )
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
script = ExtResource( 1 )

[node name="DFMButton" type="Button" parent="Column/PanelContainer"]
modulate = Color( 1, 1, 1, 0.12549 )
margin_left = 1880.0
margin_top = 836.0
margin_right = 1920.0
margin_bottom = 883.0
hint_tooltip = "Toggle the code editor expanded."
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 8
shortcut_in_tooltip = false
shortcut = SubResource( 12 )
icon = ExtResource( 10 )
flat = true

[node name="LockedOverlay" parent="Column/PanelContainer" instance=ExtResource( 14 )]
visible = false
margin_right = 1906.0
margin_bottom = 953.0

[node name="MarginContainer" type="MarginContainer" parent="Column/PanelContainer"]
margin_left = 1864.0
margin_right = 1920.0
margin_bottom = 56.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_constants/margin_right = 12
custom_constants/margin_top = 12

[node name="ConnectionIndicator" parent="Column/PanelContainer/MarginContainer" instance=ExtResource( 18 )]
margin_top = 12.0
margin_right = 44.0
margin_bottom = 36.0
rect_min_size = Vector2( 24, 24 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Column"]
margin_top = 899.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="Column" type="VBoxContainer" parent="Column/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 161.0
mouse_filter = 2

[node name="Row" type="HBoxContainer" parent="Column/MarginContainer/Column"]
margin_right = 1880.0
margin_bottom = 63.0
mouse_filter = 2
alignment = 1

[node name="RunButton" type="Button" parent="Column/MarginContainer/Column/Row"]
margin_left = 684.0
margin_right = 844.0
margin_bottom = 63.0
rect_min_size = Vector2( 160, 40 )
hint_tooltip = "Run your code."
mouse_default_cursor_shape = 2
custom_styles/focus = ExtResource( 11 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Run"
icon = ExtResource( 3 )

[node name="PauseButton" type="Button" parent="Column/MarginContainer/Column/Row"]
margin_left = 860.0
margin_right = 1020.0
margin_bottom = 63.0
rect_min_size = Vector2( 160, 40 )
hint_tooltip = "Toggle the game viewport paused."
mouse_default_cursor_shape = 2
custom_styles/focus = ExtResource( 11 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "Pause"
icon = ExtResource( 2 )

[node name="RestoreButton" type="Button" parent="Column/MarginContainer/Column/Row"]
margin_left = 1036.0
margin_right = 1196.0
margin_bottom = 63.0
rect_min_size = Vector2( 160, 40 )
hint_tooltip = "Reset your code to the starting point."
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_styles/focus = ExtResource( 11 )
disabled = true
shortcut_in_tooltip = false
shortcut = SubResource( 8 )
text = "Reset"
icon = ExtResource( 5 )

[node name="Row2" type="HBoxContainer" parent="Column/MarginContainer/Column"]
margin_top = 79.0
margin_right = 1880.0
margin_bottom = 141.0
mouse_filter = 2
alignment = 1

[node name="SolutionButton" type="Button" parent="Column/MarginContainer/Column/Row2"]
margin_left = 658.0
margin_right = 836.0
margin_bottom = 62.0
rect_min_size = Vector2( 160, 40 )
hint_tooltip = "Show this practice's solution code."
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_styles/focus = ExtResource( 11 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 10 )
text = "Solution"
icon = ExtResource( 4 )

[node name="ConsoleButton" type="Button" parent="Column/MarginContainer/Column/Row2"]
margin_left = 852.0
margin_right = 1015.0
margin_bottom = 62.0
hint_tooltip = "Toggle the output console's visibility."
mouse_default_cursor_shape = 2
custom_styles/focus = ExtResource( 11 )
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
shortcut = SubResource( 6 )
text = "Output"
icon = ExtResource( 9 )

[node name="ContinueButton" type="Button" parent="Column/MarginContainer/Column/Row2"]
margin_left = 1031.0
margin_right = 1221.0
margin_bottom = 62.0
rect_min_size = Vector2( 160, 40 )
hint_tooltip = "Continue the course."
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_styles/focus = ExtResource( 11 )
disabled = true
shortcut_in_tooltip = false
shortcut = SubResource( 10 )
text = "Continue"
icon = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
